crates/ty_python_semantic/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_Basic_(f15db7dc447d0795).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_await.md - Invalid await diagnostics - Basic
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
1 | async def main() -> None:
2 |     await 1  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `Literal[1]` is not awaitable
   --> src/mdtest_snippet.py:2:11
    |
  1 | async def main() -> None:
  2 |     await 1  # error: [invalid-await]
    |           ^
    |
   ::: stdlib/builtins.pyi:348:7
    |
347 | @disjoint_base
348 | class int:
    |       --- type defined here
349 |     """int([x]) -> integer
350 |     int(x, base=10) -> integer
    |
info: `__await__` is missing
info: rule `invalid-await` is enabled by default

```
